Resolve image overlap on Text with Image Widget

--- a/app/assets/stylesheets/widgets/single_column/messaging.scss
+++ b/app/assets/stylesheets/widgets/single_column/messaging.scss
@@ -28,7 +28,7 @@
     display: inline-block;
     vertical-align: middle;
     width: 100%;
-    height: auto;
+    height: 100%;
   }
 
   .video-links-title {
@@ -220,7 +220,6 @@
 
   /* Text Right Variation */
   &.messaging-widget__text-right {
-
     /* Medium Screen */
     @include media($medium-screen) {
       .media-column {
@@ -253,7 +252,6 @@
   /* Text Left Variation */
   &.messaging-widget__text-left {
     @include direction-context(right-to-left) {
-
       /* Medium Screen */
       @include media($medium-screen) {
         .media-column {
@@ -383,7 +381,6 @@
       color: $cu-red;
     }
   }
-
 }
 
 /* Fact Card Media */
@@ -400,7 +397,6 @@
 
 /* Circle image with Text */
 .primary-content.one-column {
-
   .messaging-widget.messaging-widget__2-column.messaging-widget__text-right.circle,
   .messaging-widget.messaging-widget__2-column.messaging-widget__text-left.circle,
   .messaging-widget.messaging-widget__1-column.messaging-widget__text-right.circle,
